# Parkowanko

./: .gitignore  build.sh  manage.py  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: render.yml
Events/: apps.py  models.py
Events/migrations/: 0001_initial.py
ParkowankoAPI/: asgi.py  exceptions.py  settings.py  urls.py  wsgi.py
ParkownakoAPI/: asgi.py  settings.py  urls.py  wsgi.py
Ranks/: add_ranks_to_db.py  apps.py  models.py
Ranks/migrations/: 0001_initial.py  0002_rank_created_at_rank_updated_at.py
Reviews/: admin.py  apps.py  models.py  signals.py
Reviews/api/: serializers.py  urls.py  validators.py  views.py
Reviews/migrations/: 0001_initial.py  0002_review_delete_parkingpointreport.py  0003_remove_review_is_liked_reviewvote.py  0004_rename_properties_review_attribiutes_and_more.py  0005_alter_review_parking_point_delete_reviewvote.py  0006_review_is_like_alter_review_attribiutes_and_more.py  0007_alter_review_attribiutes.py  0008_alter_review_is_like.py  0009_review_updated_at.py  0010_rename_attribiutes_review_attributes.py  0011_alter_review_occupancy.py
Reviews/tests/: test_models.py
auth_system/: adapter.py  admin.py  apps.py  models.py  signals.py
auth_system/api/: serializers.py  urls.py  views.py
auth_system/migrations/: 0001_initial.py  0002_account_updated_at.py  0004_alter_account_username.py  (+5 more)
parking_point/: admin.py  apps.py  models.py  signals.py
parking_point_edit_location/: apps.py  models.py  signals.py
parking_points/: apps.py  models.py
report_POI/: admin.py  apps.py  models.py
(+82 files in other folders)
