[tool.poetry]
name = "parkowankoapi"
version = "0.1.0"
description = ""
authors = ["Dobauron <safetysafetystrazak@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
django = ">=5.1.5,<6.0.0"
djangorestframework = ">=3.15.2,<4.0.0"
djangorestframework-simplejwt = ">=5.4.0,<6.0.0"
drf-spectacular = ">=0.28.0,<0.29.0"
python-decouple = ">=3.8,<4.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
